blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/Workspace__c.object-meta.xml
<CustomObject>
    <description>One account inside the product (a team space, tenant or organisation). Holds plan, seat and usage figures synced from the product, so sales sees usage next to the commercial record.</description>
    <label>Workspace</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workspaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>