blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Activated__c.field-meta.xml
<CustomField>
    <fullName>Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The workspace has reached the product's activation milestone, as defined by product.</description>
    <label>Activated</label>
    <type>Checkbox</type>
</CustomField>