blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Active_users_30d__c.field-meta.xml
<CustomField>
    <fullName>Active_users_30d__c</fullName>
    <description>Distinct users who used the product in the last 30 days, synced nightly.</description>
    <label>Active users (30 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>