blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Billing_source__c.field-meta.xml
<CustomField>
    <fullName>Billing_source__c</fullName>
    <description>Whether the workspace pays by card through self-serve billing or by invoice agreed with sales.</description>
    <label>Billing source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>