blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A company can have several workspaces. Shows all of them next to the company record.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workspaces</relationshipLabel>
    <relationshipName>Workspaces</relationshipName>
    <type>Lookup</type>
</CustomField>