blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Last_active_date__c.field-meta.xml
<CustomField>
    <fullName>Last_active_date__c</fullName>
    <description>The last day any user was active in the workspace.</description>
    <label>Last active date</label>
    <type>Date</type>
</CustomField>