blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Lifecycle_stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_stage__c</fullName>
    <description>Where the workspace is in the self-serve journey.</description>
    <label>Lifecycle stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed up</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Trialling</fullName>
            </value>
            <value>
                <fullName>Paying</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>