blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Limit_usage_percent__c.field-meta.xml
<CustomField>
    <fullName>Limit_usage_percent__c</fullName>
    <description>How much of the tightest plan limit the workspace has used. Over 80 is an expansion signal.</description>
    <label>Plan limit used</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>