blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Mrr__c.field-meta.xml
<CustomField>
    <fullName>Mrr__c</fullName>
    <description>Monthly recurring revenue for this workspace at current prices, from billing.</description>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>