blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Pql_score__c.field-meta.xml
<CustomField>
    <fullName>Pql_score__c</fullName>
    <description>Score from 0 to 100 combining usage and company fit. The rule is a decision, so the number is a guide.</description>
    <label>PQL score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>