blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Pql_status__c.field-meta.xml
<CustomField>
    <fullName>Pql_status__c</fullName>
    <description>Whether the workspace meets the product-qualified lead rule. Set by automation, not by hand.</description>
    <label>PQL status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not qualified</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Accepted by sales</fullName>
            </value>
            <value>
                <fullName>Rejected by sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>