blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Product_workspace_id__c.field-meta.xml
<CustomField>
    <fullName>Product_workspace_id__c</fullName>
    <description>The workspace's identifier in the product database. The key used to match synced usage to this record.</description>
    <label>Product workspace ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>