blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Seats_paid__c.field-meta.xml
<CustomField>
    <fullName>Seats_paid__c</fullName>
    <description>Seats the workspace is paying for. Compared with seats used to find expansion.</description>
    <label>Seats paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>