blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Seats_used__c.field-meta.xml
<CustomField>
    <fullName>Seats_used__c</fullName>
    <description>Active seats in the product, synced nightly.</description>
    <label>Seats used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>