blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Signup_date__c.field-meta.xml
<CustomField>
    <fullName>Signup_date__c</fullName>
    <description>The day the workspace was created.</description>
    <label>Sign-up date</label>
    <type>Date</type>
</CustomField>