blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/fields/Trial_ends_date__c.field-meta.xml
<CustomField>
    <fullName>Trial_ends_date__c</fullName>
    <description>The day the current trial ends. Empty if not on a trial.</description>
    <label>Trial end date</label>
    <type>Date</type>
</CustomField>