blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/listViews/Pql_queue.listView-meta.xml
<ListView>
    <fullName>Pql_queue</fullName>
    <columns>NAME</columns>
    <columns>Pql_score__c</columns>
    <columns>Pql_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pql_status__c</field>
        <operation>equals</operation>
        <value>Qualified</value>
    </filters>
    <label>PQL queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>