blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Workspace__c/listViews/Trials_ending.listView-meta.xml
<ListView>
    <fullName>Trials_ending</fullName>
    <columns>NAME</columns>
    <columns>Trial_ends_date__c</columns>
    <columns>Lifecycle_stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lifecycle_stage__c</field>
        <operation>equals</operation>
        <value>Trialling</value>
    </filters>
    <filters>
        <field>Trial_ends_date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Trial_ends_date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <label>Trials ending soon</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>